# rsomics-plink-io

./: Cargo.toml  README.md
benches/: bench.rs
src/: export.rs  lib.rs  main.rs  stats.rs
tests/: compat.rs
tests/golden/: small.bed  small.bim
